// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.getEnricherOrDieTryin by default 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with api error 1`] = `
Object {
  "exception": Object {
    "type": "SparkpostApiError",
  },
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with current user 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": 123,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {
    "access_level": "admin",
    "customer": 123,
    "username": "test-user",
  },
}
`;

exports[`.getEnricherOrDieTryin with document language 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "af",
    "navigatorLanguage": "unknown",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with error from our bundle 1`] = `
Object {
  "exception": Object {
    "values": Array [
      Object {
        "stacktrace": Object {
          "frames": Array [
            Object {
              "filename": "sparkpost.com/static/js/bundle.js",
              "function": "test",
            },
          ],
        },
      },
    ],
  },
  "level": "error",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "2web2ui",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with navigator language 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "en-US",
    "source": "unknown",
  },
  "user": Object {},
}
`;

exports[`.getEnricherOrDieTryin with tags 1`] = `
Object {
  "level": "warning",
  "logger": "test",
  "tags": Object {
    "customer": undefined,
    "documentLanguage": "unknown",
    "navigatorLanguage": "unknown",
    "source": "unknown",
    "tenant": "test",
  },
  "user": Object {},
}
`;
